<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_LineReference" Id="{faf75320-7e12-435c-8c01-a1a394548c18}">
    <Declaration><![CDATA[TYPE ST_LineReference:
STRUCT
  nThis    : UINT := 0;
  nFixedID : UINT := 0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>