<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="CL_MasterRootClass" Id="{92d25d2e-4038-4367-a45e-53b08684dc3c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK CL_MasterRootClass
VAR
  //_nThisIrrLine is either the GHSpan or the Irrigation line.  The irrigation line is some installation coincides with the GHSpan, in other installation is one of the 2 lines of the GHSpan
  //_nThisIrrLine               : UINT :=0; //contain the irrigation line = irrigation line array index to which the object refer to
  //_nThisIrrLineFixedID        : UINT :=0; //contain the irrigation line FixedID derived from EL008 harware bit selector
  
  _IrrLine                    : ST_LineReference;
  
  i01                         : INT := 0;
  nHistoryStep_AR01           : ARRAY[0..C.uiHistoStep_C] OF INT;
  nLastStep01                 : INT := -1;
  
  i02                         : INT := 0;
  nHistoryStep_AR02           : ARRAY[0..C.uiHistoStep_C] OF INT;
  nLastStep02                 : INT := -1;
  
  i03                         : INT := 0;
  nHistoryStep_AR03           : ARRAY[0..C.uiHistoStep_C] OF INT;
  nLastStep03                 : INT := -1;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Case01Hysto" Id="{c21a2dba-35ab-4cc2-91c9-ebd77c3d948b}">
      <Declaration><![CDATA[METHOD Case01Hysto : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF nStep <> nLastStep01 THEN
  nLastStep01 := nStep;
  nHistoryStep_AR01[i01] := nStep;
  i01 := i01 + 1;
  IF i01 > C.uiHistoStep_C THEN
    i01 := 0;
  END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Case01HystoRev" Id="{05c1cd39-1341-4456-acbf-aaabc40f38ff}">
      <Declaration><![CDATA[METHOD Case01HystoRev : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF nStep <> nLastStep01 THEN
  nLastStep01 := nStep;
  FOR i01:= C.uiHistoStep_C TO 1 BY -1 DO
    nHistoryStep_AR01[i01] := nHistoryStep_AR01[i01-1];
  END_FOR
  nHistoryStep_AR01[0] := nStep;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Case02Hysto" Id="{a2444fb3-18dd-43f4-b541-ebf6036e4d70}">
      <Declaration><![CDATA[METHOD Case02Hysto : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF nStep <> nLastStep02 THEN
  nLastStep02 := nStep;
  nHistoryStep_AR02[i02] := nStep;
  i02 := i02 + 1;
  IF i02 > C.uiHistoStep_C THEN
    i02 := 0;
  END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Case02HystoRev" Id="{4221a86b-9ab8-416c-9669-0164f1154473}">
      <Declaration><![CDATA[METHOD Case02HystoRev : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF nStep <> nLastStep02 THEN
  nLastStep02 := nStep;
  FOR i02:= C.uiHistoStep_C TO 1 BY -1 DO
    nHistoryStep_AR02[i02] := nHistoryStep_AR02[i02-1];
  END_FOR
  nHistoryStep_AR02[0] := nStep;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Case03Hysto" Id="{1ab83e67-a34d-442d-9abc-a21e249fb1a6}">
      <Declaration><![CDATA[METHOD Case03Hysto : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF nStep <> nLastStep03 THEN
  nLastStep03 := nStep;
  nHistoryStep_AR03[i03] := nStep;
  i03 := i03 + 1;
  IF i03 > C.uiHistoStep_C THEN
    i03 := 0;
  END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Case03HystoRev" Id="{eddf62dc-2e7c-4166-9738-717fe887a6ec}">
      <Declaration><![CDATA[METHOD Case03HystoRev : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF nStep <> nLastStep03 THEN
  nLastStep03 := nStep;
  FOR i03:= C.uiHistoStep_C TO 1 BY -1 DO
    nHistoryStep_AR03[i03] := nHistoryStep_AR03[i03-1];
  END_FOR
  nHistoryStep_AR03[0] := nStep;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Clear01Hysto" Id="{757feae8-ce88-4503-a180-25caa29299c8}">
      <Declaration><![CDATA[METHOD Clear01Hysto : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i01:= 1 TO C.uiHistoStep_C DO
    nHistoryStep_AR01[i01] := 0;
END_FOR
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Clear02Hysto" Id="{2ec5d523-bbc8-4d9a-ae4e-d82efd5bfa84}">
      <Declaration><![CDATA[METHOD Clear02Hysto : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i02:= 1 TO C.uiHistoStep_C DO
    nHistoryStep_AR02[i02] := 0;
END_FOR
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Clear03Hysto" Id="{23c5198b-2248-4d9d-a536-f429a2c3edd2}">
      <Declaration><![CDATA[METHOD Clear03Hysto : BOOL
VAR_INPUT
	nStep : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i03:= 1 TO C.uiHistoStep_C DO
    nHistoryStep_AR03[i03] := 0;
END_FOR
]]></ST>
      </Implementation>
    </Method>
    <Property Name="MRIrrLine" Id="{a62cf50e-0076-49bb-925b-c951f230b89c}">
      <Declaration><![CDATA[PROPERTY PUBLIC MRIrrLine : UINT]]></Declaration>
      <Get Name="Get" Id="{ac628814-c561-4cfd-9afd-12c62979e6ff}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[MRIrrLine := _IrrLine.nThis;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{aa2ee292-0fcc-4562-a706-6d95519b76ba}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_IrrLine.nThis := MRIrrLine;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="MRIrrLineFixedID" Id="{f073a66a-e12a-4769-83ce-c9de4fb06daa}">
      <Declaration><![CDATA[PROPERTY PUBLIC MRIrrLineFixedID : UINT]]></Declaration>
      <Get Name="Get" Id="{f78e31cb-def3-4767-a6a4-f388e148c0b6}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[MRIrrLineFixedID := _IrrLine.nFixedID;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{2ccb50ab-cf67-449c-80e5-588f1b5ac48f}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_IrrLine.nFixedID := MRIrrLineFixedID;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="MRLineRef" Id="{bac79d96-2606-4306-b34f-d5a6c1117aaa}">
      <Declaration><![CDATA[PROPERTY PUBLIC MRLineRef : ST_LineReference]]></Declaration>
      <Get Name="Get" Id="{8bcc770a-96f5-40e1-9a72-5d56750996a7}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[MRLineRef := _IrrLine;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{e96f5dba-3745-495f-b046-686eb7fc2f4f}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_IrrLine := MRLineRef;]]></ST>
        </Implementation>
      </Set>
    </Property>
  </POU>
</TcPlcObject>